--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
-    //compile project(':ShareSDK')
-    compile 'com.android.common:ShareSDK:1.2.3-SNAPSHOT'
+    compile project(':ShareSDK')
+    //compile 'com.android.common:ShareSDK:1.2.3-SNAPSHOT'
     compile 'com.android.common:FrescoSupport:1.0.0'
 }
